# test-wasm

./: .gitignore  CMakeLists.txt
src/: hello.c
